--- a/package.json
+++ b/package.json
@@ -18,15 +18,22 @@
   },
   "homepage": "https://github.com/xandrf/TypescriptWebPackJobBoardDemo#readme",
   "devDependencies": {
+    "css-loader": "^6.5.1",
+    "html-webpack-plugin": "^5.5.0",
+    "mini-css-extract-plugin": "^2.5.2",
+    "node-sass": "^7.0.1",
+    "sass": "^1.49.0",
+    "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.1",
     "ts-loader": "^9.2.6",
     "typescript": "^4.5.5",
-    "webpack-cli": "^4.9.1"
+    "webpack": "^5.67.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
-    "font-awesome": "^4.7.0",
-    "jquery": "^3.6.0",
-    "webpack-dev-server": "^4.7.3"
+    "jquery": "^3.6.0"
   }
 }
