--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "webpack-dev-server": "^4.7.3"
   },
   "dependencies": {
+    "@types/jquery": "^3.5.13",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "file-loader": "^6.2.0",
     "jquery": "^3.6.0"
   }
 }
