--- a/package.json
+++ b/package.json
@@ -35,7 +35,11 @@
     "@types/jquery": "^3.5.13",
     "axios": "^0.25.0",
     "bootstrap": "^5.1.3",
+    "copy-webpack-plugin": "^10.2.1",
     "file-loader": "^6.2.0",
-    "jquery": "^3.6.0"
+    "html-loader": "^3.1.0",
+    "jquery": "^3.6.0",
+    "svg-sprite-loader": "^6.0.11",
+    "url-loader": "^4.1.1"
   }
 }
