--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,9 @@
 {
     "compilerOptions": {
       "outDir": "./pub/",
-      "noImplicitAny": true,
-      "module": "es6",
-      "target": "es5",
+      "noImplicitAny": false,
+      "module": "esnext",
+      "target": "es2021",
       "allowJs": true,
       "moduleResolution": "node",
       "lib": ["DOM","DOM.Iterable"]
